llvm/test/tools/llubi/lib_printf_unknown_specifier.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare i32 @printf(ptr, ...)

define i32 @main() {
  %fmt = alloca [4 x i8]
  store [4 x i8] c"%m\0A\00", ptr %fmt

  call i32 (ptr, ...) @printf(ptr %fmt, i32 0)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %fmt = alloca [4 x i8], align 1 => ptr 0x8 [fmt]
; CHECK-NEXT:   store [4 x i8] c"%m\0A\00", ptr %fmt, align 1
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %1 = call i32 (ptr, ...) @printf(ptr %fmt, i32 0) at @main
; CHECK-NEXT: Immediate UB detected: Unknown or unsupported format specifier 'm' in printf.
; CHECK-NEXT: error: Execution of function 'main' failed.
